--- a/index.html
+++ b/index.html
@@ -1,59 +1,32 @@
-<!doctype html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>QTickets redirect</title>
-
-    <!-- запрет кэширования -->
+<!doctype html><html lang="ru"><head>
+    <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Redirect…</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma"        content="no-cache">
     <meta http-equiv="Expires"       content="0">
-
-    <style>
-        body{margin:0;display:flex;justify-content:center;align-items:center;
-            height:100vh;font-family:sans-serif}
-    </style>
-
     <script>
-        (function () {
+        (function (){
+            const p     = new URLSearchParams(location.search);
+            const raw   = p.get('startapp') || p.get('tgWebAppStartParam');
+            if(!raw){document.body.textContent='startapp missing';return;}
 
-            /* 1. читаем startapp (или tgWebAppStartParam, если Telegram переименовал) */
-            const s = new URLSearchParams(location.search);
-            const raw = s.get('startapp') || s.get('tgWebAppStartParam');
-            if (!raw){ document.body.textContent='startapp отсутствует'; return; }
+            const [eventId, b64=''] = raw.split('_',2);
 
-            /* 2. разбиваем по '_' */
-            const parts = raw.split('_');
-            const eventId = parts[0];
-            if (!eventId){ document.body.textContent='eventId отсутствует'; return; }
+            /* ↓ base64url → JSON → объект */
+            let utm = {};
+            if(b64){
+                const pad = b64.length%4? '='.repeat(4-b64.length%4):'';
+                const json = atob(b64.replace(/-/g,'+').replace(/_/g,'/')+pad);
+                try{ utm = JSON.parse(json); }catch(e){}
+            }
 
-            const utmKeys = ['utm_source','utm_medium','utm_campaign','utm_term','utm_content'];
+            const q = new URLSearchParams({ tgWebAppStartParam:eventId, event_id:eventId, _cb:Date.now() });
+            if(utm.s) q.set('utm_source',   utm.s);
+            if(utm.m) q.set('utm_medium',   utm.m);
+            if(utm.c) q.set('utm_campaign', utm.c);
+            if(utm.t) q.set('utm_term',     utm.t);
+            if(utm.o) q.set('utm_content',  utm.o);
 
-            /* 3. собираем query для qtickets */
-            const q = new URLSearchParams();
-
-            /* — что нужно серверу для проверки подписи Telegram — */
-            q.set('tgWebAppStartParam', eventId);
-            q.set('event_id',            eventId);
-
-            /* — utm-параметры — */
-            utmKeys.forEach((key, idx)=>{
-                const val = parts[idx+1];           // смещение на 1, т.к. [0] — eventId
-                if (val) q.set(key, decodeURIComponent(val));
-            });
-
-            /* cache-buster */
-            q.set('_cb', Date.now());
-
-            /* 4. неизменный hash (#tgWebAppData=…) */
-            const dest = `https://qtickets.ru/telegram-iframe?${q}${location.hash||''}`;
-
-            location.replace(dest);               // WebApp остаётся в том же контексте
+            location.replace(`https://qtickets.ru/telegram-iframe?${q}${location.hash||''}`);
         })();
-    </script>
-</head>
-<body>
-<p>Загружаем QTickets…</p>
-</body>
-</html>
+    </script></head><body></body></html>
